--- a/TimeWizard/TimeWizard.csproj
+++ b/TimeWizard/TimeWizard.csproj
@@ -58,8 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="script\Player.cs" />
     <Compile Include="script\Portal.cs" />
     <Compile Include="script\TimeWizard.cs" />
+    <Compile Include="script\World.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
