--- a/TimeWizard/TimeWizard.csproj
+++ b/TimeWizard/TimeWizard.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="script\Player.cs" />
     <Compile Include="script\Portal.cs" />
+    <Compile Include="script\Spike.cs" />
     <Compile Include="script\TimeWizard.cs" />
     <Compile Include="script\World.cs" />
   </ItemGroup>
